<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:background="@color/skyBlue">


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="40">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"
                    android:background="@color/skyBlue"
                    android:gravity="center|right"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/txt_answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginRight="10dp"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="50sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"
                    android:orientation="horizontal"
                    android:weightSum="20">

                    <LinearLayout
                        android:id="@+id/ll_seven"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center|bottom"
                            android:text="@string/sevenNumeric"
                            android:textSize="50sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_eight"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5">

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center|bottom"
                            android:text="@string/eightNumeric"
                            android:textSize="50sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_nine"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5">

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center|bottom"
                            android:text="@string/nineNumeric"
                            android:textSize="50sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_divide"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:gravity="center|bottom">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/divide" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/equal" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45"
            android:orientation="vertical"
            android:weightSum="45">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:weightSum="20">

                <LinearLayout
                    android:id="@+id/ll_four"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|bottom"
                        android:text="@string/fourNumeric"
                        android:textSize="50sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_five"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|bottom"
                        android:text="@string/fiveNumeric"
                        android:textSize="50sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_six"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|bottom"
                        android:text="@string/sixNumeric"
                        android:textSize="50sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_multiply"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/multiply"
                        android:gravity="center|bottom" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:orientation="horizontal"
                android:weightSum="20">

                <LinearLayout
                    android:id="@+id/ll_one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|bottom"
                        android:text="@string/oneNumeric"
                        android:textSize="50sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_two"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|bottom"
                        android:text="@string/twoNumeric"
                        android:textSize="50sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_three"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|bottom"
                        android:text="@string/threeNumeric"
                        android:textSize="50sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_subtract"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="25dp"
                        android:background="@drawable/subtract" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:orientation="horizontal"
                android:weightSum="20">

                <LinearLayout
                    android:id="@+id/ll_clear"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10">

                    <Button
                        android:id="@+id/btn_clear"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="20dp"
                        android:background="@color/skyBlue"
                        android:text="@string/clearCaps"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_zero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:gravity="center|bottom"
                        android:text="@string/zeroNumeric"
                        android:textSize="50sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_add"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="23dp"
                        android:background="@drawable/add" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>